crates/dbdict/tests/snapshots/validate_spec__s07_enum_without_values.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 403
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: c
        type: enum
────────────────────────────────────────
error: [S07] An `enum` column must list its categories with `values`.
 --> dict.yaml:7:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: c
7 |         type: enum
  |               ^^^^ has type `enum` but is missing `values`
