crates/dbdict/tests/snapshots/validate_spec__s07_examples_on_boolean.snap
---
source: crates/dbdict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: active
        type: boolean
        examples: [true, false]
────────────────────────────────────────
error: [S07] A `boolean` column must not have `values`, `range`, or `examples`.
 --> dict.yaml:8:19
  |
4 |   - name: table
5 |     columns:
6 |       - name: active
7 |         type: boolean
8 |         examples: [true, false]
  |                   ^^^^^^^^^^^^ has type `boolean` but uses `examples`
