crates/dbdict/tests/snapshots/validate_spec__s07_wrong_rep_on_enum.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 458
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: status
        type: enum
        range: [0, 10]
────────────────────────────────────────
error: [S07] An `enum` column must list its categories with `values`.
 --> dict.yaml:7:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: status
7 |         type: enum
  |               ^^^^ has type `enum` but is missing `values`
error: [S07] An `enum` column must use `values`, not `range`.
 --> dict.yaml:8:16
  |
4 |   - name: table
5 |     columns:
6 |       - name: status
7 |         type: enum
8 |         range: [0, 10]
  |                ^^^^^^ has type `enum` but uses `range`
