crates/dbdict/tests/snapshots/validate_spec__s10_duplicate_column_name.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 545
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
      - name: id
        type: string
        examples: [a, b, c]
────────────────────────────────────────
error: [S10] Column names must be unique within a table.
 --> dict.yaml:9:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: id
...
9 |       - name: id
  |               ^^ is duplicated
