crates/dbdict/tests/snapshots/validate_spec__s11_empty_column_name.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 598
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: ""
        type: string
        examples: [a, b, c]
────────────────────────────────────────
error: [S11] Every column must have a non-empty `name`.
 --> dict.yaml:6:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: ""
  |               ^ the `name` is empty
